--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# EE4483 Mini Project (Option 2): Cats vs Dogs\n",
     "\n",
-    "Name: Melvin Kok Xinwei\n",
+    "Name: Melvin Kok Xinwei<br>\n",
     "Matriculation Number: U1820030C\n",
     "\n",
     "## Overview\n",
@@ -49,7 +49,7 @@
     "from torch.utils.data import DataLoader, Dataset\n",
     "from tqdm import tqdm\n",
     "\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline"
    ]
   },
   {
@@ -191,16 +191,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Class to index mappings\n",
-    "idx_to_class = {i:j for i, j in enumerate(train_classes)}\n",
-    "class_to_idx = {value:key for key,value in idx_to_class.items()}\n",
+    "# Class to id mappings\n",
+    "class_to_id = {\"cat\": 0, \"dog\": 1}\n",
     "\n",
     "# Custom Dataset class\n",
     "class CatDogDataset(Dataset):\n",
-    "    def __init__(self, image_paths, class_to_idx, transform=False):\n",
+    "    def __init__(self, image_paths, class_to_id, transform=False):\n",
     "        self.image_paths = image_paths\n",
     "        self.transform = transform\n",
-    "        self.class_to_idx = class_to_idx\n",
+    "        self.class_to_id = class_to_id\n",
     "\n",
     "    def __len__(self):\n",
     "        return len(self.image_paths)\n",
@@ -211,7 +210,7 @@
     "        image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
     "\n",
     "        label = image_filepath.split(separator)[-2]\n",
-    "        label = self.class_to_idx[label]\n",
+    "        label = self.class_to_id[label]\n",
     "        if self.transform is not None:\n",
     "            image = self.transform(image)\n",
     "\n",
@@ -287,8 +286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = CatDogDataset(train_image_paths, class_to_idx, train_transform)\n",
-    "valid_dataset = CatDogDataset(validation_image_paths, class_to_idx, validation_transform)"
+    "train_dataset = CatDogDataset(train_image_paths, class_to_id, train_transform)\n",
+    "valid_dataset = CatDogDataset(validation_image_paths, class_to_id, validation_transform)"
    ]
   },
   {
