Fix models dir not found error

--- a/main.ipynb
+++ b/main.ipynb
@@ -666,6 +666,7 @@
     "\n",
     "    # Save model if validation loss is the lowest\n",
     "    if len(valid_losses)>1 and (valid_loss<min(valid_losses[:-1])):\n",
+    "        Path(\"./models\").mkdir(parents=True, exist_ok=True)\n",
     "        torch.save(model.state_dict(), f\"models/{params['lr']}_{params['image_size']}_{params['n_epochs']}_{params['dropout_rate']}.pth\")"
    ]
   },
@@ -1242,6 +1243,7 @@
     "    valid_acc.append(accuracy)\n",
     "\n",
     "    if len(valid_losses)>1 and (valid_loss<min(valid_losses[:-1])):\n",
+    "        Path(\"./models\").mkdir(parents=True, exist_ok=True)\n",
     "        torch.save(model.state_dict(), f\"models/cifar_10_{params['lr']}_{params['image_size']}_{params['n_epochs']}_{params['dropout_rate']}.pth\")"
    ]
   },
